--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -1,8 +1,6 @@
-siteTitle: Yellow Cake
+siteTitle: Lincoln Electric Cutting Systems
 siteUrl: 'https://yellowcake.netlify.com'
-siteDescription: >-
-  A starter project for creating lightning-fast websites with Gatsby v2 Netlify
-  CMS v2 and Uploadcare media library.
+siteDescription: ''
 socialMediaCard:
-  image: 'https://ucarecdn.com/fcc8d148-a9a8-42ee-a793-0f12b1437f61/'
-googleTrackingId: 'UA-133175780-1'
+  image: 'https://ucarecdn.com/517b4b58-a016-4f21-aa5e-ea763b29f94f/'
+googleTrackingId: UA-40086373-3
